# pty-chi

./: .gitignore  README.rst  pyproject.toml  requirements.txt
docs/source/: getting_started.rst
docs/source/using_pty_chi/: data_structures.rst  index.rst  io.rst  options.rst  task.rst  workflows.rst
examples/: save_movies.py
src/ptychi/: image_proc.py  maths.py
src/ptychi/api/: task.py
src/ptychi/api/options/: __init__.py  ad_general.py  ad_ptychography.py  base.py  bh.py  data.py  dm.py  lsqml.py  pie.py  task.py  workflow.py
src/ptychi/data_structures/: base.py  object.py  probe.py
src/ptychi/reconstructors/: lsqml.py
src/ptychi/workflows/: __init__.py  base.py  multiscan_shared_object.py  progressive_resolution.py
tests/: test_2d_ptycho_affine_pos.py  test_2d_ptycho_autodiff.py  test_2d_ptycho_autodiff_multiprocess.py  test_2d_ptycho_bh.py  test_2d_ptycho_detector_size.py  test_2d_ptycho_dip.py  test_2d_ptycho_dm.py  test_2d_ptycho_epie.py  test_2d_ptycho_epie_mixed_states.py  test_2d_ptycho_epie_opr.py  test_2d_ptycho_epie_position_correction.py  test_2d_ptycho_lsqml.py  test_2d_ptycho_lsqml_compact.py  test_2d_ptycho_lsqml_momentum.py  test_2d_ptycho_lsqml_multiprocess.py  test_2d_ptycho_lsqml_multiscan.py  test_2d_ptycho_lsqml_uniform.py  test_2d_ptycho_mpie.py  test_2d_ptycho_near_field.py  test_2d_ptycho_object_hard_limits_magnitude_phase.py  test_2d_ptycho_opt_plan.py  test_2d_ptycho_probe_center_constraint.py  test_2d_ptycho_rpie_synthesisdictlearn.py  test_2d_ptycho_smoothness_constraint.py  test_data_on_gpu.py  test_default_device.py  test_large_tensor_offload.py  test_lsqml_probe_position_momentum.py  test_maths.py  test_multiscan_shared_object_workflow.py  test_multislice_ptycho_autodiff.py  test_multislice_ptycho_autodiff_multigpu.py  test_multislice_ptycho_autodiff_regularized.py  test_multislice_ptycho_autodiff_slice_spacing_opt.py  test_multislice_ptycho_lsqml.py  test_multislice_ptycho_lsqml_joint_step_size.py  test_multislice_ptycho_lsqml_nonsq_psize.py  test_multislice_ptycho_lsqml_regularized.py  test_multislice_ptycho_rpie_synthesisdictlearn.py  test_options_validation.py  (+4 more)
