[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychi"
description = "Pty-chi is a package of ptychography reconstruction engines"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
dependencies = [
    "h5py",
    "mypy",
    "numpy>=2.1",
    "pandas",
    "pydantic>=2,<3",
    "pytest>=8.4.1",
    "ruff",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.4",
    "torchvision",
    "tqdm",
    "matplotlib>=3.10.6",
]
dynamic = ["version"]

[project.optional-dependencies]
cpu = [
    "torch>=2.4",
    "torchvision",
]
cuda126 = [
    "torch>=2.4",
    "torchvision",
]
cuda132 = [
    "torch>=2.4",
    "torchvision",
]
rocm72 = [
    "torch>=2.4",
    "torchvision",
    "triton-rocm; sys_platform == 'linux'",
]
movies = ["opencv-python"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
nn = [
    "torchinfo",
]

[tool.setuptools_scm]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda126" },
        { extra = "cuda132" },
        { extra = "rocm72" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cuda126" },
    { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cuda132" },
    { index = "pytorch-rocm72", marker = "sys_platform == 'linux'", extra = "rocm72" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cuda126" },
    { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'", extra = "cuda132" },
    { index = "pytorch-rocm72", marker = "sys_platform == 'linux'", extra = "rocm72" },
]
"triton-rocm" = { index = "pytorch-rocm72", marker = "sys_platform == 'linux'", extra = "rocm72" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.package-data]
"ptychi" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
